Literals use static unmodifiable map